// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing all the pin model functions create(new_pin) returns data in the correct shape 1`] = `
Object {
  "imgurl": "https://www.instagram.com/p/CQjnfaOsYo9v8EFjjpZHNFTEMFkXsBNKaOgcDY0/",
  "maker": "disney lagoon",
  "pin_id": 6,
}
`;

exports[`testing all the pin model functions findByMaker(maker) returns data in the correct shape 1`] = `
Array [
  Object {
    "imgurl": "https://www.instagram.com/p/CRhGSWHr4h18xiDeoyzFbCGzMjhrfOjlbe8LEQ0/",
    "maker": "pastel shooting star",
    "pin_id": 1,
  },
  Object {
    "imgurl": "https://cdn.shopify.com/s/files/1/0557/3594/3342/products/20210707_162003_1024x1024@2x.jpg?v=1626969050",
    "maker": "pastel shooting star",
    "pin_id": 5,
  },
]
`;

exports[`testing all the pin model functions findByTag(tag_name) returns data in the correct shape 1`] = `
Array [
  Object {
    "imgurl": "https://www.instagram.com/p/CW4D3YwL8TjSuF-d0phzfcBvAaY_X_itXtPWI00/",
    "maker": "astral pins",
    "pin_id": 2,
    "tag_name": "princess serenity",
  },
  Object {
    "imgurl": "https://www.instagram.com/p/CSiW5xiFs0H/",
    "maker": "moon rabbit pins",
    "pin_id": 3,
    "tag_name": "princess serenity",
  },
  Object {
    "imgurl": "https://www.instagram.com/p/CV4SIHYMior9IXyDEmBh-UBfnfFnx6k4Qda2eY0/",
    "maker": "nyxxi pins",
    "pin_id": 4,
    "tag_name": "princess serenity",
  },
]
`;

exports[`testing all the pin model functions findPinById(pin_id) returns data in the correct shape 1`] = `
Object {
  "imgurl": "https://www.instagram.com/p/CRhGSWHr4h18xiDeoyzFbCGzMjhrfOjlbe8LEQ0/",
  "maker": "pastel shooting star",
  "pin_id": 1,
}
`;

exports[`testing all the pin model functions findUsersIsoPin returns data in the correct shape 1`] = `
Array [
  Object {
    "pin_id": 3,
    "username": "princess_serenity",
  },
  Object {
    "pin_id": 3,
    "username": "rei_hino",
  },
]
`;

exports[`testing all the pin model functions findUsersWhoHavePin returns data in the correct shape 1`] = `
Array [
  Object {
    "pin_id": 4,
    "username": "princess_serenity",
  },
  Object {
    "pin_id": 4,
    "username": "minako_aino",
  },
]
`;

exports[`testing all the pin model functions update(pin_id, updated_pin) returns data in the correct shape 1`] = `
Object {
  "imgurl": "https://www.instagram.com/p/CRhGSWHr4h18xiDeoyzFbCGzMjhrfOjlbe8LEQ0/",
  "maker": "Pastel Shooting Star",
  "pin_id": 1,
}
`;
